<resources>
    <string name="app_name">andsoon</string>
    <string name="name">Andsoon</string>
    <string name="bio">" Додаток для аналізу харчування. Користувачі можуть просто ввести список інгредієнтів і отримати повний аналіз їх поживності (вміст макро і мікроелементів, вітамінів і т.д.). Джерело Даних: Edamam"</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="productName">Andsoon Food</string>
    <string name="SignIn">Sign In</string>
    <string name="textString">Hello!</string>
    <string name="EmailValue">Email</string>
    <string name="Password_string">Password</string>
    <string name="email_hint">someemail@example.com</string>
    <string name="password_hint">***************</string>
    <string name="google_label_text">or use one of your google profiles</string>
    <string name="forgot_label_text">Forgot Password?</string>
    <string name="SignUpString">Sign Up</string>
    <string name="SignUp">Sign Up</string>
    <string name="Have_acc">Have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_statistics">Statistics</string>
    <string name="profile_title">Profile</string>
    <string name="gender_title">Sex</string>
    <string name="gender_hint">your sex</string>
    <string name="male_title">male</string>
    <string name="female_title">female</string>
    <string name="age_title">Age</string>
    <string name="age_hint">your age</string>
    <string name="height_title">Height</string>
    <string name="weight_title">Weight</string>
    <string name="save_button">Save</string>
    <string name="next_button">Next</string>
    <string name="skip_value">"skip "</string>
    <string name="title_text">Title Text</string>
    <string name="dest_text">Description Text</string>
    <string name="analyze_button">Analyze!</string>
    <string name="way_title">Way of life</string>
</resources>