<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpages.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafffa">


        <TextView
            android:id="@+id/password_label"
            style="@style/SignGreenStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/Password_string"
            app:layout_constraintEnd_toEndOf="@+id/email_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_label"
            app:layout_constraintTop_toBottomOf="@+id/email_sign" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="197dp"
            android:layout_height="199dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013"
            app:srcCompat="@drawable/dish" />

        <TextView
            android:id="@+id/SignUp"
            style="@style/SignStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/SignIn"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_label"
            style="@style/SignGreenStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/EmailValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp" />

        <EditText
            android:id="@+id/email_sign"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <EditText
            android:id="@+id/password_sign"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/email_sign"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_sign"
            app:layout_constraintTop_toBottomOf="@+id/email_sign" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/SignButtonStyle"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:text="@string/SignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_sign"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/google_label"
            style="@style/SignTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/google_label_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <TextView
            android:id="@+id/have_acc_label"
            style="@style/SignBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/forgot_label_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_textbutton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_label"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/sign_up_textbutton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="104dp"
            android:layout_height="44dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/SignUp"
            android:textColor="#aedd94"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/have_acc_label"
            app:layout_constraintTop_toBottomOf="@+id/google_label"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>